# web-agent

./: .editorconfig  .env.example  .gitignore  .prettierrc.yml  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs  utils.rs
src/inferences/: gpt.rs  mod.rs
src/services/: config.rs  mod.rs
src/subagents/: mod.rs  planning.rs
static/: .note
static/instructions/: planning.txt
static/migrations/: 0.1.0.sql
