[package]
name = "linnearai"
version = "0.1.0"
edition = "2021"
publish = false

# Metadata
readme = "README.md"
license = "AGPL-3.0-or-later"
authors = ["Edwin Kys <edwin@linnearai.com>"]

# Links
repository = "https://github.com/linnearai/linnear"
documentation = "https://docs.linnearai.com"
homepage = "https://www.linnearai.com"

[dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
clap = "4.5.26"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
dotenv = "0.15.0"

# Types
uuid = { version = "1.11.0", features = ["serde", "v4", "fast-rng"] }
chrono = { version = "0.4.39", features = ["serde"] }
url = { version = "2.5.4", features = ["serde"] }

[dependencies.sqlx]
version = "0.8.3"
features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono"]
